@@ -10,7 +10,7 @@ import twilightforest.entity.boss.Lich;
 import twilightforest.entity.monster.LichMinion;
 import twilightforest.init.TFSounds;
 import twilightforest.item.LifedrainScepterItem;
-import twilightforest.util.EntityUtil;
+import twilightforest.util.entities.EntityUtil;
 
 import java.util.EnumSet;
 import java.util.List;
@@ -19,6 +19,7 @@ public class LichAbsorbMinionsGoal extends Goal {
 
 	private final Lich lich;
 
+	@SuppressWarnings("this-escape")
 	public LichAbsorbMinionsGoal(Lich lich) {
 		this.lich = lich;
 		this.setFlags(EnumSet.of(Flag.LOOK, Flag.MOVE));
@@ -43,14 +44,15 @@ public class LichAbsorbMinionsGoal extends Goal {
 
 	@Override
 	public void tick() {
+		if (this.lich.getTeleportInvisibility() > 0) return;
 		super.tick();
 		if (this.lich.getScepterTimeLeft() > 0) return;
 
 		List<LichMinion> minions = this.lich.level().getEntitiesOfClass(LichMinion.class, this.lich.getBoundingBox().inflate(32.0D, 16.0D, 32.0D))
-				.stream().filter(m -> m.master == this.lich).toList();
+			.stream().filter(m -> m.master == this.lich).toList();
 
 		if (!minions.isEmpty()) {
-			LichMinion minion = minions.get(0);
+			LichMinion minion = minions.getFirst();
 			minion.discard();
 			//rain particles
 			LifedrainScepterItem.animateTargetShatter((ServerLevel) this.lich.level(), minion);
@@ -63,7 +65,7 @@ public class LichAbsorbMinionsGoal extends Goal {
 			this.lich.playSound(TFSounds.LICH_POP_MOB.get(), 3.0F, 0.4F + this.lich.getRandom().nextFloat() * 0.2F);
 			minion.playSound(TFSounds.LICH_POP_MOB.get(), 3.0F, 0.4F + this.lich.getRandom().nextFloat() * 0.2F);
 			// make trail so it's clear that we did it
-			this.lich.makeMagicTrail(minion.getEyePosition(), this.lich.getEyePosition(), 0.5F, 0.0F, 1.0F);
+			this.lich.makeMagicTrail(minion.getEyePosition(), this.lich.getEyePosition(), 1.0F, 0.5F, 0.5F);
 			//heal some health
 			this.lich.heal(minion.getHealth());
 			this.lich.swing(InteractionHand.MAIN_HAND);
